# fastapi-postgresql-nuxt3-docker-project-generator

{{cookiecutter.project_slug}}/: .env  docker-compose.yml
{{cookiecutter.project_slug}}/backend/app/: pyproject.toml
{{cookiecutter.project_slug}}/backend/app/app/core/: config.py
