[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
fastapi = "^0.100.1"
python-multipart = "^0.0.6"
email-validator = "^2.0.0.post2"
requests = "^2.31.0"
celery = "^5.3.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
tenacity = "^8.2.2"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.2"
emails = "^0.6"
raven = "^6.10.0"
gunicorn = "^21.2.0"
jinja2 = "^3.1.2"
psycopg2-binary = "^2.9.6"
alembic = "^1.11.1"
sqlalchemy = "^2.0.19"
pytest = "^7.4.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.dev-dependencies]
mypy = "^1.4.1"
black = "^23.7.0"
isort = "^5.12.0"
autoflake = "^2.2.0"
flake8 = "^6.0.0"
pytest = "^7.4.0"
sqlalchemy-stubs = "^0.4"
pytest-cov = "^4.1.0"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

